# OSSchecktools

./: README.md
.github/workflows/: scanoss.yml
Copyright_extraction/: README.md  __init__.py  cleanup.py  extract.py  main.py  parse_and_duplication.py  prerequisite.py  pyproject.toml  requirments.txt  scancode.py
Copyright_extraction/src/copyright_extraction/: cleanup.py  extract.py  main.py  scancode.py
